# integra

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
.claude/commands/: ingest-data.md  prp-sync.md  youtube-extract.md
.claude/hooks/: format-after-edit.sh
integra/: __init__.py  app.py
integra/core/: config.py  orchestrator.py  registry.py
integra/data/: audit.py  cc_history.py  collectors.py  controlled_use.py  encryption.py  ingestion.py  mcp_server.py  quota.py  schemas.py  streaks.py  youtube.py
integra/integrations/: advisor.py  halt.py  penance.py  questionnaire.py  questionnaire_ui.py  scheduler.py  telegram.py  telegram_questionnaire_ui.py
integra/integrations/channels/: __init__.py  base.py  router.py  telegram.py
integra/integrations/projects/: __init__.py  base.py  github.py  linear.py  router.py
memory/: gh-issues.md  prp-guide.md
tests/: test_advisor.py  test_app.py  test_audit.py  test_cc_history.py  test_channels_base.py  test_channels_router.py  test_collectors.py  test_controlled_use.py  test_data_mcp.py  test_diary.py  test_encryption.py  test_halt.py  test_ingestion.py  test_orchestrator.py  test_penance.py  test_projects_base.py  test_projects_github.py  test_projects_linear.py  test_projects_router.py  test_questionnaire.py  test_quota.py  test_registry.py  test_scheduler.py  test_schemas.py  test_security.py  test_streaks.py  test_telegram.py  test_youtube.py
